--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
         <div class="flex flex-col gap-6 md:gap-12 w-full">
             <div class="h-96 rounded-3xl bg-white/20 w-full relative overflow-hidden">
                 <div class="flex flex-col p-8 z-20">
-                    <h1 class="text-7xl font-bold drop-shadow-lg">18°C</h1>
+                    <h1 id="maintemp" class="text-7xl font-bold drop-shadow-lg">Chargement...</h1>
                     <span class="drop-shadow-lg tracking-wider">Humidité : <b>20%</b></span>
                     <span class="drop-shadow-lg tracking-wider">Batterie : <b>69%</b></span>
                 </div>
@@ -314,6 +314,14 @@
           }
         },
       });
+
+      fetch('/api/remotesensor')
+      .then((response) => response.json())
+        .then((data) => {
+            console.log(data)
+            document.getElementById('maintemp').innerText = `${Object.entries(data)[2][1].temp} °C`
+
+        });
     </script>
 </body>
 </html>
