project: Rename current sensor endpoint

--- a/static/index.html
+++ b/static/index.html
@@ -315,7 +315,7 @@
         },
       });
 
-      fetch('/api/remotesensor')
+      fetch('/api/currentsensor')
       .then((response) => response.json())
         .then((data) => {
             console.log(data)
