index: Loading state on battery and humidity

--- a/static/index.html
+++ b/static/index.html
@@ -35,8 +35,8 @@
             <div class="h-96 rounded-3xl bg-white/20 w-full relative overflow-hidden">
                 <div class="flex flex-col p-8 z-20">
                     <h1 id="maintemp" class="text-7xl font-bold drop-shadow-lg">Chargement...</h1>
-                    <span class="drop-shadow-lg tracking-wider">Humidité : <b id="mainhumid">20%</b></span>
-                    <span class="drop-shadow-lg tracking-wider">Batterie : <b id="mainbatt">69%</b></span>
+                    <span class="drop-shadow-lg tracking-wider">Humidité : <b id="mainhumid">Chargement...</b></span>
+                    <span class="drop-shadow-lg tracking-wider">Batterie : <b id="mainbatt">Chargement...</b></span>
                 </div>
 
                 <div class="absolute left-0 right-0 bottom-0 z-0 h-64">
