--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,7 @@
         <img src="https://thispersondoesnotexist.com/image" class="h-16 w-16 rounded-full">
     </div>
 
-    <div x-data="appXData()" class="flex flex-col md:flex-row gap-12 container mx-auto md:px-6 md:pb-16 h-full">
+    <div x-data="appXData()" class="flex flex-col md:flex-row gap-12 lg:container mx-auto md:px-6 md:pb-16 h-full">
         <div class="flex flex-col gap-6 md:gap-12 w-full">
             <div class="h-96 rounded-3xl bg-white/20 w-full relative overflow-hidden">
                 <div class="flex flex-col p-8 z-20">
