--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,7 @@
         <img src="https://thispersondoesnotexist.com/image" class="h-16 w-16 rounded-full">
     </div>
 
-    <div x-data="appXData()" class="flex flex-col md:flex-row gap-12 lg:container mx-auto md:px-6 md:pb-16 h-full">
+    <div x-data="appXData()" class="flex flex-col md:flex-row gap-12 lg:container mx-auto lg:px-6 md:pb-16 h-full">
         <div class="flex flex-col gap-6 md:gap-12 w-full">
             <div class="h-96 rounded-3xl bg-white/20 w-full relative overflow-hidden">
                 <div class="flex flex-col p-8 z-20">
@@ -121,23 +121,23 @@
                 <template x-for="(sensorData, index) in history[selectedSensor]">
                     <tr>
                         <td class="text-center py-2">
-                            <h4 x-text="sensorData.time" class="text-xl font-bold leading-3 pt-2"></h4>
+                            <h4 x-text="sensorData.time" class="text-lg lg:text-xl font-bold leading-3 pt-2"></h4>
                             <small x-text="sensorData.date"></small>
                         </td>
                         <td class="text-center">
-                            <h3 x-text="sensorData.temp + ' °C'" class="md:text-3xl font-bold"></h3>
+                            <h3 x-text="sensorData.temp + ' °C'" class="lg:text-3xl font-bold"></h3>
                         </td>
                         <td class="text-center">
-                            <h3 class="md:text-3xl font-bold">
+                            <h3 class="text-md lg:text-3xl font-bold">
                                 <span x-text="sensorData.humid || 'N/A'"></span>
                                 <span x-show="sensorData.humid"> %</span>
                             </h3>
                         </td>
                         <td class="text-center">
-                            <h3 x-text="sensorData.rssi + 'dB'" class="md:text-3xl font-bold"></h3>
+                            <h3 x-text="sensorData.rssi + 'dB'" class="text-md lg:text-3xl font-bold"></h3>
                         </td>
                         <td class="text-center">
-                            <h3 x-text="sensorData.batterie + ' %'" class="md:text-3xl font-bold"></h3>
+                            <h3 x-text="sensorData.batterie + ' %'" class="text-md lg:text-3xl font-bold"></h3>
                         </td>
                     </tr>
                 </template>
