--- a/static/index.html
+++ b/static/index.html
@@ -43,9 +43,9 @@
                     </span>
                 </div>
 
-                <div class="absolute inset-0 z-0 h-64">
-                    <div id="currentSensorDataPadding" class="h-32"></div>
-                    <canvas id="graphChart"></canvas>
+                <div class="flex flex-col absolute inset-0 z-0">
+                    <div id="currentSensorDataPadding" class="h-32 flex-shrink-0"></div>
+                    <div class="h-full"><canvas id="graphChart"></canvas></div>
                 </div>
             </div>
 
@@ -181,7 +181,13 @@
         }
 
         const datapoints = history.map(x => x.temp * 10).reverse()
-        const datapointsHumid = []
+
+        const minGraph = Math.min(...datapoints) - 10
+        const maxGraph = Math.max(...datapoints) + 5
+        const areaGraph = maxGraph - minGraph
+        const humidAreaGraph = (areaGraph / 5) * 3
+
+        const datapointsHumid = (history[0].humid !== null) ? history.map(x => minGraph + ((x.humid * humidAreaGraph) / 100)).reverse() : []
 
         if (datapoints[0] < 0) {
           document.getElementById('currentSensorDataPadding').style.background = 'rgba(255, 255, 255, 0.3)'
@@ -236,8 +242,8 @@
               },
               y: {
                 display: false,
-                min: Math.min(...datapoints) - 10,
-                max: Math.max(...datapoints) + 5 // HIGHEST ELEMENT PLUS AT LEAST TWO
+                min: minGraph,
+                max: maxGraph // HIGHEST ELEMENT PLUS AT LEAST TWO
               }
             }
           },
